--- a/src/gallium/winsys/dri/nouveau/Makefile
+++ b/src/gallium/winsys/dri/nouveau/Makefile
@@ -8,6 +8,7 @@ MINIGLX_SOURCES =
 
 PIPE_DRIVERS = \
 	$(TOP)/src/gallium/drivers/softpipe/libsoftpipe.a \
+	$(TOP)/src/gallium/drivers/nv04/libnv04.a \
 	$(TOP)/src/gallium/drivers/nv10/libnv10.a \
 	$(TOP)/src/gallium/drivers/nv30/libnv30.a \
 	$(TOP)/src/gallium/drivers/nv40/libnv40.a \
