i915: Renamed intel_screen to intel_device
	The renameing makes more sense, why because:
	In egl you have a display/driver/device as the
	basis, and you have screens as outputs.

--- a/src/gallium/winsys/egl_drm/intel/Makefile
+++ b/src/gallium/winsys/egl_drm/intel/Makefile
@@ -12,7 +12,7 @@ PIPE_DRIVERS = \
 DRIVER_SOURCES = \
 	intel_swapbuffers.c \
 	intel_context.c \
-	intel_screen.c \
+	intel_device.c \
 	intel_egl.c
 
 C_SOURCES = \
