--- a/src/glut/mini/Makefile
+++ b/src/glut/mini/Makefile
@@ -93,6 +93,6 @@ install: glut.pc
 # Remove .o and backup files
 clean: depend
 	-rm -f depend depend.bak
-	-rm -f *.o *~ *.o *~ *.so libglut.so.3.7
+	-rm -f *.o *~ *.o *~ *.so *.pc libglut.so.3.7
 
 include depend
