--- a/src/gallium/auxiliary/tgsi/SConscript
+++ b/src/gallium/auxiliary/tgsi/SConscript
@@ -9,6 +9,7 @@ tgsi = env.ConvenienceLibrary(
 		'util/tgsi_dump.c',
 		'util/tgsi_parse.c',
 		'util/tgsi_scan.c',
+		'util/tgsi_text.c',
 		'util/tgsi_transform.c',
 		'util/tgsi_util.c',
 	])
