python: New state tracker which exposes the pipe driver to python scripts.
Still under development. Just barely works.

--- a/src/gallium/SConscript
+++ b/src/gallium/SConscript
@@ -25,3 +25,5 @@ SConscript([
 
 for driver in env['drivers']:
 	SConscript(os.path.join('drivers', driver, 'SConscript'))
+
+SConscript('state_trackers/python/SConscript')
