--- a/src/gallium/auxiliary/tgsi/SConscript
+++ b/src/gallium/auxiliary/tgsi/SConscript
@@ -8,6 +8,7 @@ tgsi = env.ConvenienceLibrary(
 		'util/tgsi_build.c',
 		'util/tgsi_dump.c',
 		'util/tgsi_parse.c',
+		'util/tgsi_sanity.c',
 		'util/tgsi_scan.c',
 		'util/tgsi_text.c',
 		'util/tgsi_transform.c',
