scons: List util/tgsi_dump_c.c.

--- a/src/gallium/auxiliary/tgsi/SConscript
+++ b/src/gallium/auxiliary/tgsi/SConscript
@@ -7,6 +7,7 @@ tgsi = env.ConvenienceLibrary(
 		'exec/tgsi_sse2.c',
 		'util/tgsi_build.c',
 		'util/tgsi_dump.c',
+		'util/tgsi_dump_c.c',
 		'util/tgsi_iterate.c',
 		'util/tgsi_parse.c',
 		'util/tgsi_sanity.c',
