tgsi: Update Makefile to include tgsi_iterate.c

--- a/src/gallium/auxiliary/tgsi/Makefile
+++ b/src/gallium/auxiliary/tgsi/Makefile
@@ -6,6 +6,7 @@ LIBNAME = tgsi
 C_SOURCES = \
 	exec/tgsi_exec.c \
 	exec/tgsi_sse2.c \
+	util/tgsi_iterate.c \
 	util/tgsi_build.c \
 	util/tgsi_dump.c \
 	util/tgsi_parse.c \
