--- a/src/libXvMC/Makefile
+++ b/src/libXvMC/Makefile
@@ -1,7 +1,12 @@
 TARGET		= libXvMCg3dvl.so
 SONAME		= libXvMCg3dvl.so.1
 GALLIUMDIR	= ../gallium
-OBJECTS		= block.o surface.o context.o subpicture.o attributes.o ${GALLIUMDIR}/winsys/g3dvl/xsp_winsys.o
+
+OBJECTS         = block.o surface.o context.o subpicture.o attributes.o
+
+ifeq (${DRIVER}, softpipe)
+OBJECTS         += ${GALLIUMDIR}/winsys/g3dvl/xsp_winsys.o
+endif
 
 CFLAGS	+= -g -fPIC -Wall -Werror			\
 	   -I${GALLIUMDIR}/state_trackers/g3dvl		\
@@ -9,6 +14,8 @@ CFLAGS	+= -g -fPIC -Wall -Werror			\
 	   -I${GALLIUMDIR}/include			\
 	   -I${GALLIUMDIR}/auxiliary			\
 	   -I${GALLIUMDIR}/drivers
+
+ifeq (${DRIVER}, softpipe)
 LDFLAGS	+= -L${GALLIUMDIR}/state_trackers/g3dvl		\
 	   -L${GALLIUMDIR}/drivers/softpipe		\
 	   -L${GALLIUMDIR}/auxiliary/tgsi		\
@@ -17,7 +24,17 @@ LDFLAGS	+= -L${GALLIUMDIR}/state_trackers/g3dvl		\
 	   -L${GALLIUMDIR}/auxiliary/cso_cache		\
 	   -L${GALLIUMDIR}/auxiliary/util		\
 	   -L${GALLIUMDIR}/auxiliary/rtasm
+else
+LDFLAGS	+= -L${GALLIUMDIR}/state_trackers/g3dvl		\
+   	   -L${GALLIUMDIR}/winsys/g3dvl/nouveau		\
+   	   -L${GALLIUMDIR}/auxiliary/util
+endif
+
+ifeq (${DRIVER}, softpipe)
 LIBS	+= -lg3dvl -lsoftpipe -ldraw -ltgsi -ltranslate -lrtasm -lcso_cache -lutil -lm
+else
+LIBS	+= -lg3dvl -lnouveau_dri -lutil
+endif
 
 #############################################
 
