g3dvl: Minor fixes.

--- a/src/driclient/src/Makefile
+++ b/src/driclient/src/Makefile
@@ -12,6 +12,7 @@ all: ${TARGET} test
 
 ${TARGET}: ${OBJECTS}
 	ar rcs $@ $^
+	if ! test -d ../lib; then mkdir ../lib; fi
 	cp ${TARGET} ../lib
 
 test: test.o
