--- a/src/gallium/winsys/g3dvl/nouveau/Makefile
+++ b/src/gallium/winsys/g3dvl/nouveau/Makefile
@@ -39,8 +39,10 @@ LIBS		+= -ldriclient -ldrm -lnv10 -lnv30 -lnv40 -lnv50 -ldraw -ltgsi -ltranslate
 all: ${TARGET}
 
 ${TARGET}: ${OBJECTS}
+	cd ${DRIDIR}/src; ${MAKE}
 	$(CC) ${LDFLAGS} -shared -o $@ $^ ${LIBS}
 
 clean:
+	cd ${DRIDIR}/src; ${MAKE} clean
 	rm -rf ${OBJECTS} ${TARGET}
 
