--- a/src/gallium/drivers/trace/SConscript
+++ b/src/gallium/drivers/trace/SConscript
@@ -10,6 +10,7 @@ trace = env.ConvenienceLibrary(
 		'tr_screen.c',
         'tr_state.c',
 		'tr_stream.c',
+        'tr_winsys.c',
 	])
 
 Export('trace')
