Fixed 'make install' for darwin

--- a/src/glx/x11/Makefile
+++ b/src/glx/x11/Makefile
@@ -73,7 +73,7 @@ default: depend $(TOP)/$(LIB_DIR)/$(GL_LIB_NAME)
 $(TOP)/$(LIB_DIR)/$(GL_LIB_NAME):  $(OBJECTS) Makefile
 	$(MKLIB) -o $(GL_LIB) -linker '$(CC)' -ldflags '$(LDFLAGS)' \
 		-major 1 -minor 2 $(MKLIB_OPTIONS) \
-		-install $(TOP)/$(LIB_DIR) -id $(INSTALL_LIB_DIR)/libGL.1.dylib \
+		-install $(TOP)/$(LIB_DIR) -id $(INSTALL_LIB_DIR)/lib$(GL_LIB).1.dylib \
 		$(GL_LIB_DEPS) $(OBJECTS)
 
 
