python: Allow to use trace pipe driver with python.

--- a/src/gallium/state_trackers/python/SConscript
+++ b/src/gallium/state_trackers/python/SConscript
@@ -30,5 +30,5 @@ if 'python' in env['statetrackers']:
         source = [
             'st_hardpipe_winsys.c',
         ],
-        LIBS = [pyst, softpipe] + auxiliaries + env['LIBS'],
+        LIBS = [pyst, softpipe, trace] + auxiliaries + env['LIBS'],
     )
