--- a/src/gallium/drivers/trace/SConscript
+++ b/src/gallium/drivers/trace/SConscript
@@ -3,14 +3,15 @@ Import('*')
 env = env.Clone()
 
 trace = env.ConvenienceLibrary(
-	target = 'trace',
-	source = [
+    target = 'trace',
+    source = [
         'tr_context.c',
         'tr_dump.c',
-		'tr_screen.c',
+        'tr_screen.c',
         'tr_state.c',
-		'tr_stream.c',
+        'tr_stream.c',
+        'tr_texture.c',
         'tr_winsys.c',
-	])
+    ])
 
 Export('trace')
