g3dvl: Modularized rendering, refactored to accommodate VAAPI, other APIs.

--- a/src/gallium/state_trackers/g3dvl/Makefile
+++ b/src/gallium/state_trackers/g3dvl/Makefile
@@ -1,5 +1,6 @@
 TARGET		= libg3dvl.a
-OBJECTS		= vl_context.o vl_data.o vl_surface.o vl_shader_build.o vl_util.o
+OBJECTS		= vl_display.o vl_screen.o vl_context.o vl_surface.o vl_data.o vl_shader_build.o vl_util.o vl_basic_csc.o \
+		  vl_r16snorm_mc.o
 GALLIUMDIR	= ../..
 
 CFLAGS		+= -g -Wall -fPIC -Werror -I${GALLIUMDIR}/include -I${GALLIUMDIR}/auxiliary -I${GALLIUMDIR}/winsys/g3dvl
@@ -15,4 +16,3 @@ ${TARGET}: ${OBJECTS}
 
 clean:
 	rm -rf ${OBJECTS} ${TARGET}
-
