consolidate intel directories.
we now have

src/gallium/winsys/drm/intel/{common,dri,egl}

--- a/src/gallium/winsys/SConscript
+++ b/src/gallium/winsys/SConscript
@@ -1,8 +1,8 @@
 Import('*')
 
-if env['dri']:
+if env['drm']:
 	SConscript([
-		'dri/SConscript',
+		'drm/SConscript',
 	])
 	
 if 'xlib' in env['winsys']:
