--- a/src/gallium/winsys/drm/intel/egl/Makefile
+++ b/src/gallium/winsys/drm/intel/egl/Makefile
@@ -1,5 +1,4 @@
-
-TOP = ../../../../..
+TOP = ../../../../../..
 include $(TOP)/configs/current
 
 LIBNAME = EGL_i915.so
@@ -7,7 +6,7 @@ LIBNAME = EGL_i915.so
 PIPE_DRIVERS = \
 	$(TOP)/src/gallium/drivers/softpipe/libsoftpipe.a \
 	$(TOP)/src/gallium/drivers/i915simple/libi915simple.a \
-	$(TOP)/src/gallium/winsys/common/intel_drm/libinteldrm.a
+	../common/libinteldrm.a
 
 DRIVER_SOURCES = \
 	intel_swapbuffers.c \
@@ -21,9 +20,9 @@ C_SOURCES = \
 
 ASM_SOURCES = 
 
-DRIVER_DEFINES = -I$(TOP)/src/mesa/drivers/dri/intel $(shell pkg-config libdrm --atleast-version=2.3.1 \
+DRIVER_DEFINES = -I../common $(shell pkg-config libdrm --atleast-version=2.3.1 \
 				&& echo "-DDRM_VBLANK_FLIP=DRM_VBLANK_FLIP")
 
-include ../Makefile.template
+include ../../Makefile.template
 
 symlinks:
