gallium: do a proper implementation of GL_OES_read_format
Examine the currently bound color buffer's format to see if there's a good
format/type match.

--- a/src/mesa/SConscript
+++ b/src/mesa/SConscript
@@ -153,6 +153,7 @@ if env['platform'] != 'winddk':
 		'state_tracker/st_cb_flush.c',
 		'state_tracker/st_cb_drawpixels.c',
 		'state_tracker/st_cb_fbo.c',
+		'state_tracker/st_cb_get.c',
 		'state_tracker/st_cb_feedback.c',
 		'state_tracker/st_cb_program.c',
 		'state_tracker/st_cb_queryobj.c',
