--- a/src/gallium/auxiliary/util/SConscript
+++ b/src/gallium/auxiliary/util/SConscript
@@ -13,6 +13,7 @@ util = env.ConvenienceLibrary(
 		'u_gen_mipmap.c',
 		'u_handle_table.c',
 		'u_hash_table.c',
+		'u_math.c',
 		'u_mm.c',
 		'u_simple_shaders.c',
 		'u_snprintf.c',
