gallium: rename p_util.c to u_rect.c (it only contains rect copy/fill helpers)

--- a/src/gallium/auxiliary/util/SConscript
+++ b/src/gallium/auxiliary/util/SConscript
@@ -7,7 +7,6 @@ util = env.ConvenienceLibrary(
 		'p_debug_mem.c',
 		'p_debug_prof.c',
 		'p_tile.c',
-		'p_util.c',
 		'u_blit.c',
 		'u_draw_quad.c',
 		'u_gen_mipmap.c',
@@ -15,6 +14,7 @@ util = env.ConvenienceLibrary(
 		'u_hash_table.c',
 		'u_math.c',
 		'u_mm.c',
+		'u_rect.c',
 		'u_simple_shaders.c',
 		'u_snprintf.c',
 		'u_time.c',
