--- a/src/gallium/auxiliary/util/Makefile
+++ b/src/gallium/auxiliary/util/Makefile
@@ -6,7 +6,6 @@ LIBNAME = util
 C_SOURCES = \
 	p_debug.c \
 	p_tile.c \
-	p_util.c \
 	u_blit.c \
 	u_draw_quad.c \
 	u_gen_mipmap.c \
@@ -14,6 +13,7 @@ C_SOURCES = \
 	u_hash_table.c \
 	u_math.c \
 	u_mm.c \
+	u_rect.c \
 	u_simple_shaders.c \
 	u_snprintf.c \
 	u_time.c
