--- a/src/gallium/state_trackers/g3dvl/Makefile
+++ b/src/gallium/state_trackers/g3dvl/Makefile
@@ -1,6 +1,6 @@
 TARGET		= libg3dvl.a
 OBJECTS		= vl_display.o vl_screen.o vl_context.o vl_surface.o vl_shader_build.o vl_util.o vl_basic_csc.o	\
-		  vl_r16snorm_mc.o
+		  vl_r16snorm_mc.o vl_r16snorm_mc_buf.o
 GALLIUMDIR	= ../..
 
 CFLAGS		+= -g -Wall -fPIC -I${GALLIUMDIR}/include -I${GALLIUMDIR}/auxiliary -I${GALLIUMDIR}/winsys/g3dvl
