--- a/src/gallium/auxiliary/util/Makefile
+++ b/src/gallium/auxiliary/util/Makefile
@@ -16,7 +16,8 @@ C_SOURCES = \
 	u_simple_shaders.c \
 	u_snprintf.c \
 	u_tile.c \
-	u_time.c
+	u_time.c \
+	u_timed_winsys.c
 
 include ../../Makefile.template
 
