util: Rip-off trace's os-independent stream code.

--- a/src/gallium/auxiliary/util/SConscript
+++ b/src/gallium/auxiliary/util/SConscript
@@ -16,6 +16,8 @@ util = env.ConvenienceLibrary(
 		'u_rect.c',
 		'u_simple_shaders.c',
 		'u_snprintf.c',
+        'u_stream_stdc.c',
+        'u_stream_wd.c',
 		'u_tile.c',
 		'u_time.c',
 	])
