--- a/src/gallium/auxiliary/util/Makefile
+++ b/src/gallium/auxiliary/util/Makefile
@@ -15,6 +15,8 @@ C_SOURCES = \
 	u_rect.c \
 	u_simple_shaders.c \
 	u_snprintf.c \
+	u_stream_stdc.c \
+	u_stream_wd.c \
 	u_tile.c \
 	u_time.c \
 	u_timed_winsys.c
