gallium: don't build winsys/ here

--- a/src/gallium/Makefile
+++ b/src/gallium/Makefile
@@ -2,7 +2,8 @@ TOP = ../..
 include $(TOP)/configs/current
 
 
-SUBDIRS = auxiliary drivers winsys
+SUBDIRS = auxiliary drivers
+# Note winsys/ needs to be built after src/mesa
 
 
 default: subdirs
