mesa: fix asst path/include mistakes in prev commits

--- a/src/glx/x11/Makefile
+++ b/src/glx/x11/Makefile
@@ -50,7 +50,7 @@ OBJECTS = $(SOURCES:.c=.o) $(MESA_GLAPI_OBJECTS)
 INCLUDES = -I. \
 	-I$(TOP)/include \
 	-I$(TOP)/include/GL/internal \
-	-I$(TOP)/src/mesa/glapi \
+	-I$(TOP)/src/mesa \
 	$(LIBDRM_CFLAGS) \
 	$(DRI2PROTO_CFLAGS) \
 	$(X11_INCLUDES)
