--- a/src/glx/x11/Makefile
+++ b/src/glx/x11/Makefile
@@ -51,6 +51,7 @@ INCLUDES = -I. \
 	-I$(TOP)/include \
 	-I$(TOP)/include/GL/internal \
 	-I$(TOP)/src/mesa \
+	-I$(TOP)/src/mesa/glapi \
 	$(LIBDRM_CFLAGS) \
 	$(DRI2PROTO_CFLAGS) \
 	$(X11_INCLUDES)
