Nouveau: name replace for nv20.
No functional changes, only changed function, struct, macro etc. names.
nv10 -> nv20
nv30 -> nv20
celsius -> kelvin
Did not touch fifo command macros.

Don't try to build nv20_vertprog.c for now.

Signed-off-by: Pekka Paalanen <pq@iki.fi>

--- a/src/gallium/drivers/nv20/Makefile
+++ b/src/gallium/drivers/nv20/Makefile
@@ -14,8 +14,8 @@ DRIVER_SOURCES = \
 	nv20_state.c \
 	nv20_state_emit.c \
 	nv20_surface.c \
-	nv20_vbo.c \
-	nv20_vertprog.c
+	nv20_vbo.c
+#	nv20_vertprog.c
 
 C_SOURCES = \
 	$(COMMON_SOURCES) \
