--- a/src/mesa/drivers/dri/r300/Makefile
+++ b/src/mesa/drivers/dri/r300/Makefile
@@ -80,7 +80,7 @@ COMMON_SYMLINKS = \
 	radeon_bo_legacy.h \
 	radeon_cs_legacy.h
 
-DRI_LIB_DEPS += -ldrm_radeon
+DRI_LIB_DEPS += -ldrm-radeon
 
 ##### TARGETS #####
 
