radeon: fix pointer dangling

--- a/src/mesa/drivers/dri/r300/Makefile
+++ b/src/mesa/drivers/dri/r300/Makefile
@@ -57,8 +57,7 @@ C_SOURCES = $(COMMON_SOURCES) $(DRIVER_SOURCES)
 
 DRIVER_DEFINES = -DCOMPILE_R300 -DR200_MERGED=0 \
 	-DRADEON_COMMON=1 -DRADEON_COMMON_FOR_R300 \
-#	-DRADEON_BO_TRACK_REF \
-#	-DRADEON_BO_TRACK_OPEN \
+#	-DRADEON_BO_TRACK \
 	-Wall
 
 SYMLINKS = \
