scons: Support MinGW32 cross compiler.
To build an alternative opengl32.dll with Gallium's software-rasterizer from a
debian-based distribution run:

  sudo apt-get install mingw32
  scons platform=windows toolchain=crossmingw machine=x86 winsys=gdi dri=no

--- a/src/gallium/winsys/gdi/SConscript
+++ b/src/gallium/winsys/gdi/SConscript
@@ -13,6 +13,12 @@ if env['platform'] == 'windows':
 		'#src/mesa/main',
 	])
 
+	env.Append(CPPDEFINES = [
+		'__GL_EXPORTS',
+		'BUILD_GL32',
+		'_GNU_H_WINDOWS32_DEFINES',
+	])
+
 	sources = [
 		'opengl32.def',
 		'wgl.c',
