--- a/src/gallium/winsys/gdi/SConscript
+++ b/src/gallium/winsys/gdi/SConscript
@@ -8,32 +8,28 @@ if env['platform'] == 'windows':
 	env = env.Clone()
 
 	env.Append(CPPPATH = [
-		'#src/mesa/glapi',
-		'#src/mesa',
-		'#src/mesa/main',
+		'#src/mesa/state_tracker/wgl',
 	])
 
 	env.Append(CPPDEFINES = [
-		'__GL_EXPORTS',
-		'BUILD_GL32',
-		'_GNU_H_WINDOWS32_DEFINES',
 	])
 
 	sources = [
-		'opengl32.def',
-		'wgl.c',
-		'wmesa.c',
+		'#src/mesa/state_tracker/wgl/opengl32.def',
+		'gdi_softpipe_winsys.c',
 	]
 		
 	drivers = [
 		softpipe,
 	]
 
-	env.Append(LIBS = ['gdi32', 'user32'])
+	env.Append(LIBS = [
+		'gdi32', 
+		'user32'
+	])
 
-	# TODO: write a wrapper function http://www.scons.org/wiki/WrapperFunctions
 	env.SharedLibrary(
 		target ='opengl32',
 		source = sources,
-		LIBS = glapi + mesa + drivers + auxiliaries + env['LIBS'],
+		LIBS = wgl + glapi + mesa + drivers + auxiliaries + env['LIBS'],
 	)
