mesa: update SConscript with new source files

--- a/src/mesa/SConscript
+++ b/src/mesa/SConscript
@@ -42,6 +42,7 @@ if env['platform'] != 'winddk':
 		'main/depth.c',
 		'main/depthstencil.c',
 		'main/dlist.c',
+		'main/dlopen.c',
 		'main/drawpix.c',
 		'main/enable.c',
 		'main/enums.c',
@@ -186,6 +187,7 @@ if env['platform'] != 'winddk':
 		'shader/prog_debug.c',
 		'shader/prog_execute.c',
 		'shader/prog_instruction.c',
+		'shader/prog_noise.c',
 		'shader/prog_parameter.c',
 		'shader/prog_print.c',
 		'shader/prog_statevars.c',
@@ -205,7 +207,6 @@ if env['platform'] != 'winddk':
 		'shader/slang/slang_emit.c',
 		'shader/slang/slang_ir.c',
 		'shader/slang/slang_label.c',
-		'shader/slang/slang_library_noise.c',
 		'shader/slang/slang_link.c',
 		'shader/slang/slang_log.c',
 		'shader/slang/slang_mem.c',
