scons: Specify C99 throughout all the tree.
MSVC may not support full C99, but supports more than plain C90. And
-pedantic without -std=c99 generates too many spurious warnings
(specially C++ style comments) to be of any use.

Note that using certain C99 features in the cross-platform parts of Gallium
is still not possible; namely mid-of-scope variable declarations and named
structure initializers will break MSVC builds.

--- a/src/mesa/SConscript
+++ b/src/mesa/SConscript
@@ -12,11 +12,6 @@ if env['platform'] != 'winddk':
 		'#/src/mesa',
 	])
 	
-	if gcc:
-		env.Append(CFLAGS = [
-			'-std=c99',
-		])
-
 	#
 	# Source files
 	#
@@ -165,6 +160,7 @@ if env['platform'] != 'winddk':
 		'state_tracker/st_context.c',
 		'state_tracker/st_debug.c',
 		'state_tracker/st_draw.c',
+		'state_tracker/st_draw_feedback.c',
 		'state_tracker/st_extensions.c',
 		'state_tracker/st_format.c',
 		'state_tracker/st_framebuffer.c',
