util: List new file in SConscript.

--- a/src/gallium/auxiliary/util/SConscript
+++ b/src/gallium/auxiliary/util/SConscript
@@ -23,6 +23,7 @@ util = env.ConvenienceLibrary(
 		'u_stream_wd.c',
 		'u_tile.c',
 		'u_time.c',
+		'u_timed_winsys.c',
 	])
 
 auxiliaries.insert(0, util)
