--- a/src/gallium/drivers/ilo/Makefile.sources
+++ b/src/gallium/drivers/ilo/Makefile.sources
@@ -1,5 +1,8 @@
 C_SOURCES := \
 	ilo_3d.c \
+	ilo_3d_pipeline.c \
+	ilo_3d_pipeline_dump.c \
+	ilo_3d_pipeline_gen6.c \
 	ilo_blit.c \
 	ilo_context.c \
 	ilo_cp.c \
