ilo: add a toy shader compiler
This is a simple shader compiler that performs almost zero optimizations.  The
generated code is usually much larger comparing to that generated by i965.
The generated code also requires many more registers.

Function-wise, it lacks register spilling and does not support most TGSI
indirections.  Other than those, it works alright.

--- a/src/gallium/drivers/ilo/Makefile.sources
+++ b/src/gallium/drivers/ilo/Makefile.sources
@@ -16,4 +16,11 @@ C_SOURCES := \
 	ilo_screen.c \
 	ilo_shader.c \
 	ilo_state.c \
-	ilo_video.c
+	ilo_video.c \
+	shader/toy_compiler.c \
+	shader/toy_compiler_asm.c \
+	shader/toy_compiler_disasm.c \
+	shader/toy_legalize.c \
+	shader/toy_legalize_ra.c \
+	shader/toy_optimize.c \
+	shader/toy_tgsi.c
